force-app/main/default/objects/Customer_Classification__c/Customer_Classification__c.object-meta.xml
<CustomObject>
    <label>Customer Classification</label>
    <nameField>
        <displayFormat>Classification-{00000}</displayFormat>
        <label>Classification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Classifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>