force-app/main/default/objects/Customer_Classification__c/fields/Amount_To_Invest__c.field-meta.xml
<CustomField>
    <fullName>Amount_To_Invest__c</fullName>
    <label>Amount To Invest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BETWEEN_200K_AND_500K</fullName>
            </value>
            <value>
                <fullName>BETWEEN_500K_AND_1M</fullName>
            </value>
            <value>
                <fullName>MORE_THAN_1M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>