force-app/main/default/objects/Customer_Classification__c/fields/Average_Transaction_Value__c.field-meta.xml
<CustomField>
    <fullName>Average_Transaction_Value__c</fullName>
    <label>Average Transaction Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LESS_THAN_10K</fullName>
            </value>
            <value>
                <fullName>BETWEEN_10K_AND_25K</fullName>
            </value>
            <value>
                <fullName>MORE_THAN_25K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>