force-app/main/default/objects/Customer_Classification__c/fields/Cancellation_Policy__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancellation Policy</label>
    <type>Checkbox</type>
</CustomField>