force-app/main/default/objects/Customer_Classification__c/fields/Cancellation_Policy_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Policy_Date__c</fullName>
    <label>Cancellation Policy Date</label>
    <type>DateTime</type>
</CustomField>