force-app/main/default/objects/Customer_Classification__c/fields/Confirm_Data_Correctness__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Data_Correctness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Data Correctness</label>
    <type>Checkbox</type>
</CustomField>