force-app/main/default/objects/Customer_Classification__c/fields/Confirm_Data_Correctness_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Data_Correctness_Date__c</fullName>
    <label>Confirm Data Correctness Date</label>
    <type>DateTime</type>
</CustomField>