force-app/main/default/objects/Customer_Classification__c/fields/Consent_for_Categorization__c.field-meta.xml
<CustomField>
    <fullName>Consent_for_Categorization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent for Categorization</label>
    <type>Checkbox</type>
</CustomField>