force-app/main/default/objects/Customer_Classification__c/fields/Consent_for_Categorization_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_for_Categorization_Date__c</fullName>
    <label>Consent for Categorization Date</label>
    <type>DateTime</type>
</CustomField>