force-app/main/default/objects/Customer_Classification__c/fields/Data_Submitted_to_Partner__c.field-meta.xml
<CustomField>
    <fullName>Data_Submitted_to_Partner__c</fullName>
    <label>Data Submitted to Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>