force-app/main/default/objects/Customer_Classification__c/fields/Data_Submitted_to_Partner_By__c.field-meta.xml
<CustomField>
    <fullName>Data_Submitted_to_Partner_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Submitted to Partner By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Data_Submitted_to_Partner</relationshipName>
    <type>Lookup</type>
</CustomField>