force-app/main/default/objects/Customer_Classification__c/fields/Data_Submitted_to_Partner_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Submitted_to_Partner_Date__c</fullName>
    <label>Data Submitted to Partner Date</label>
    <type>DateTime</type>
</CustomField>