force-app/main/default/objects/Customer_Classification__c/fields/Disposable_Wealth_Exceeds_500K__c.field-meta.xml
<CustomField>
    <fullName>Disposable_Wealth_Exceeds_500K__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disposable Wealth Exceeds 500K €</label>
    <type>Checkbox</type>
</CustomField>