force-app/main/default/objects/Customer_Classification__c/fields/Financial_Market_Job_Time__c.field-meta.xml
<CustomField>
    <fullName>Financial_Market_Job_Time__c</fullName>
    <label>Financial Market Job Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LESS_THAN_ONE_YEAR</fullName>
            </value>
            <value>
                <fullName>MORE_THAN_ONE_YEAR</fullName>
            </value>
            <value>
                <fullName>MORE_THAN_THREE_YEAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>