force-app/main/default/objects/Customer_Classification__c/fields/Financial_Market_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Financial_Market_Job_Title__c</fullName>
    <description>Do you work or have you worked in a capital markets?</description>
    <inlineHelpText>Do you work or have you worked in a capital markets?</inlineHelpText>
    <label>Financial Market Job Title</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>