force-app/main/default/objects/Customer_Classification__c/fields/Fund_Type_Participate__c.field-meta.xml
<CustomField>
    <fullName>Fund_Type_Participate__c</fullName>
    <label>Fund Type Participate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>