force-app/main/default/objects/Customer_Classification__c/fields/General_Customer_Information__c.field-meta.xml
<CustomField>
    <fullName>General_Customer_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>General Customer Information</label>
    <type>Checkbox</type>
</CustomField>