force-app/main/default/objects/Customer_Classification__c/fields/General_Customer_Information_Date__c.field-meta.xml
<CustomField>
    <fullName>General_Customer_Information_Date__c</fullName>
    <label>General Customer Information Date</label>
    <type>DateTime</type>
</CustomField>