force-app/main/default/objects/Customer_Classification__c/fields/Has_Job_in_the_Financial_Market__c.field-meta.xml
<CustomField>
    <fullName>Has_Job_in_the_Financial_Market__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Job in the Financial Market</label>
    <type>Checkbox</type>
</CustomField>