force-app/main/default/objects/Customer_Classification__c/fields/Internal_Approval__c.field-meta.xml
<CustomField>
    <fullName>Internal_Approval__c</fullName>
    <label>Internal Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Customer Approved</fullName>
            </value>
            <value>
                <fullName>Customer Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>