force-app/main/default/objects/Customer_Classification__c/fields/Internal_Approval_By__c.field-meta.xml
<CustomField>
    <fullName>Internal_Approval_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Approval By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Internal_Approval</relationshipName>
    <type>Lookup</type>
</CustomField>