force-app/main/default/objects/Customer_Classification__c/fields/Internal_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Internal_Approval_Date__c</fullName>
    <label>Internal Approval Date</label>
    <type>DateTime</type>
</CustomField>