force-app/main/default/objects/Customer_Classification__c/fields/Investment_Brokerage_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Investment_Brokerage_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investment Brokerage Agreement</label>
    <type>Checkbox</type>
</CustomField>