force-app/main/default/objects/Customer_Classification__c/fields/Investment_Brokerage_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Investment_Brokerage_Agreement_Date__c</fullName>
    <label>Investment Brokerage Agreement Date</label>
    <type>DateTime</type>
</CustomField>