force-app/main/default/objects/Customer_Classification__c/fields/Is_Test__c.field-meta.xml
<CustomField>
    <fullName>Is_Test__c</fullName>
    <formula>Account__r.Is_Test__c</formula>
    <label>Is Test</label>
    <type>Checkbox</type>
</CustomField>