force-app/main/default/objects/Customer_Classification__c/fields/Knowledge_And_Experience_Rating__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_And_Experience_Rating__c</fullName>
    <label>Knowledge And Experience Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
            </value>
            <value>
                <fullName>BASIC</fullName>
            </value>
            <value>
                <fullName>AVERAGE</fullName>
            </value>
            <value>
                <fullName>ADVANCED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>