force-app/main/default/objects/Customer_Classification__c/fields/Last_Time_Invested__c.field-meta.xml
<CustomField>
    <fullName>Last_Time_Invested__c</fullName>
    <label>Last Time Invested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MORE_THAN_10_YEARS</fullName>
            </value>
            <value>
                <fullName>ONGOING</fullName>
            </value>
            <value>
                <fullName>ONE_TO_FIVE_YEARS</fullName>
            </value>
            <value>
                <fullName>FIVE_TO_TEN_YEARS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>