force-app/main/default/objects/Customer_Classification__c/fields/Netfonds_Id__c.field-meta.xml
<CustomField>
    <fullName>Netfonds_Id__c</fullName>
    <externalId>true</externalId>
    <label>Netfonds Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>