force-app/main/default/objects/Customer_Classification__c/fields/Partner_Approval_By__c.field-meta.xml
<CustomField>
    <fullName>Partner_Approval_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Approval By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Approval</relationshipName>
    <type>Lookup</type>
</CustomField>