force-app/main/default/objects/Customer_Classification__c/fields/Partner_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Approval_Date__c</fullName>
    <label>Partner Approval Date</label>
    <type>DateTime</type>
</CustomField>