force-app/main/default/objects/Customer_Classification__c/fields/Previously_Invested_Type__c.field-meta.xml
<CustomField>
    <fullName>Previously_Invested_Type__c</fullName>
    <label>Previously Invested Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>ENTREPRENEURIAL_PARTICIPATION</fullName>
            </value>
            <value>
                <fullName>REAL_ESTATE</fullName>
            </value>
            <value>
                <fullName>VENTURE_CAPITAL</fullName>
            </value>
            <value>
                <fullName>CREDIT_FUND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>