force-app/main/default/objects/Customer_Classification__c/fields/Privacy_Policy_Date__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Policy_Date__c</fullName>
    <label>Privacy Policy Date</label>
    <type>DateTime</type>
</CustomField>