force-app/main/default/objects/Customer_Classification__c/fields/Professional_Classification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Professional_Classification_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Professional Classification Notes</label>
    <type>Checkbox</type>
</CustomField>