force-app/main/default/objects/Customer_Classification__c/fields/Professional_Classification_Notes_Date__c.field-meta.xml
<CustomField>
    <fullName>Professional_Classification_Notes_Date__c</fullName>
    <label>Professional Classification Notes Date</label>
    <type>DateTime</type>
</CustomField>