force-app/main/default/objects/Customer_Classification__c/fields/Professional_Experience__c.field-meta.xml
<CustomField>
    <fullName>Professional_Experience__c</fullName>
    <label>Professional Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>