force-app/main/default/objects/Customer_Classification__c/fields/Professional_Experience_Description__c.field-meta.xml
<CustomField>
    <fullName>Professional_Experience_Description__c</fullName>
    <label>Professional Experience Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>