force-app/main/default/objects/Customer_Classification__c/fields/Security_Transactions_Per_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Security_Transactions_Per_Quarter__c</fullName>
    <description>On average, how many securities transactions did you make per quarter last year?</description>
    <inlineHelpText>On average, how many securities transactions did you make per quarter last year?</inlineHelpText>
    <label>Security Transactions Per Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
            </value>
            <value>
                <fullName>FIVE_OR_LESS</fullName>
            </value>
            <value>
                <fullName>NINE_OR_LESS</fullName>
            </value>
            <value>
                <fullName>TEN_OR_MORE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>