force-app/main/default/objects/Customer_Classification__c/fields/System_Status__c.field-meta.xml
<CustomField>
    <fullName>System_Status__c</fullName>
    <label>System Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ONGOING</fullName>
            </value>
            <value>
                <fullName>ONGOING_ADDITIONAL_QUESTIONS</fullName>
            </value>
            <value>
                <fullName>ONGOING_AUTOMATIC_DECLINED</fullName>
            </value>
            <value>
                <fullName>ONGOING_AUTOMATIC_APPROVED</fullName>
            </value>
            <value>
                <fullName>INTERNAL_AUTOMATIC_DECLINED</fullName>
            </value>
            <value>
                <fullName>AWAITING_INTERNAL_PROCESSING</fullName>
            </value>
            <value>
                <fullName>INTERNAL_MANUALLY_APPROVED</fullName>
            </value>
            <value>
                <fullName>INTERNAL_MANUALLY_DECLINED</fullName>
            </value>
            <value>
                <fullName>AWAITING_PARTNER_PROCESSING</fullName>
            </value>
            <value>
                <fullName>PARTNER_MANUALLY_APPROVED</fullName>
            </value>
            <value>
                <fullName>PARTNER_MANUALLY_DECLINED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>