force-app/main/default/objects/Customer_Classification__c/fields/Total_Investments_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Investments_Count__c</fullName>
    <label>Total Investments Count</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
            </value>
            <value>
                <fullName>ONE_TO_THREE</fullName>
            </value>
            <value>
                <fullName>MORE_THAN_THREE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>