force-app/main/default/objects/Customer_Classification__c/fields/Total_Wealth__c.field-meta.xml
<CustomField>
    <fullName>Total_Wealth__c</fullName>
    <label>Total Wealth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LESS_THAN_100K</fullName>
            </value>
            <value>
                <fullName>LESS_THAN_1M</fullName>
            </value>
            <value>
                <fullName>LESS_THAN_2_5M</fullName>
            </value>
            <value>
                <fullName>MORE_THAN_2_5M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>