force-app/main/default/objects/Customer_Classification__c/recordTypes/Semi_Professional.recordType-meta.xml
<RecordType>
    <fullName>Semi_Professional</fullName>
    <active>true</active>
    <label>Semi Professional</label>
</RecordType>